add user actions, various fixes
