# app/Http/Controllers/UserController.php
@@ -4,29 +4,310 @@ namespace App\Http\Controllers;
 
 use App\Models\User;
 use Illuminate\Http\Request;
+use Illuminate\Http\Response;
+use Illuminate\Validation\Rule;
 
 class UserController extends Controller
 {
-    public function edit(Request $request, $id)
+    /**
+     * @OA\Get(
+     *     path="/users",
+     *     operationId="users_index",
+     *     tags={"Users"},
+     *     summary="Index",
+     *     @OA\Response(
+     *         response="200",
+     *         description="Everything is fine",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *                 property="users",
+     *                 type="array",
+     *                 collectionFormat="multi",
+     *                 @OA\Items(
+     *                     @OA\Property(
+     *                          property="current_page",
+     *                          type="integer",
+     *                          example=1,
+     *                     ),
+     *                     @OA\Property(
+     *                          property="data",
+     *                          type="array",
+     *                          collectionFormat="multi",
+     *                          @OA\Items(ref="#/components/schemas/UserResource")
+     *                     )
+     *                 ),
+     *             ),
+     *             @OA\Property(
+     *                 property="first_page_url",
+     *                 type="string",
+     *                 example="http://127.0.0.1:8000/api/users?page=1",
+     *             ),
+     *             @OA\Property(
+     *                 property="from",
+     *                 type="integer",
+     *                 example=1,
+     *             ),
+     *             @OA\Property(
+     *                 property="last_page",
+     *                 type="integer",
+     *                 example=4,
+     *             ),
+     *             @OA\Property(
+     *                 property="last_page_url",
+     *                 type="string",
+     *                 example="http://127.0.0.1:8000/api/users?page=4",
+     *             ),
+     *             @OA\Property(
+     *                 property="links",
+     *                 type="array",
+     *                 example={{
+     *                     "url": null,
+     *                     "label": "&laquo; Previous",
+     *                     "active": false
+     *                 }, {
+     *                     "url": "http://127.0.0.1:8000/api/users?page=1",
+     *                     "label": "1",
+     *                     "active": true
+     *                 }, {
+     *                     "url": "http://127.0.0.1:8000/api/users?page=2",
+     *                     "label": "2",
+     *                     "active": false
+     *                 }, {
+     *                     "url": "http://127.0.0.1:8000/api/users?page=3",
+     *                     "label": "3",
+     *                     "active": false
+     *                 }, {
+     *                     "url": "http://127.0.0.1:8000/api/users?page=4",
+     *                     "label": "4",
+     *                     "active": false
+     *                 }, {
+     *                     "url": "http://127.0.0.1:8000/api/users?page=2",
+     *                     "label": "Next &raquo;",
+     *                     "active": false
+     *                 }},
+     *                 @OA\Items(
+     *                     @OA\Property(
+     *                         property="url",
+     *                         type="string",
+     *                         example=""
+     *                      ),
+     *                      @OA\Property(
+     *                         property="label",
+     *                         type="string",
+     *                         example=""
+     *                      ),
+     *                      @OA\Property(
+     *                         property="active",
+     *                         type="boolean",
+     *                         example=""
+     *                      ),
+     *                 )
+     *             ),
+     *             @OA\Property(
+     *                 property="next_page_url",
+     *                 type="string",
+     *                 example="http://127.0.0.1:8000/api/users?page=2",
+     *             ),
+     *             @OA\Property(
+     *                 property="path",
+     *                 type="string",
+     *                 example="http://127.0.0.1:8000/api/users",
+     *             ),
+     *             @OA\Property(
+     *                 property="per_page",
+     *                 type="integer",
+     *                 example=1,
+     *             ),
+     *             @OA\Property(
+     *                 property="prev_page_url",
+     *                 type="string",
+     *                 example=null,
+     *             ),
+     *             @OA\Property(
+     *                 property="to",
+     *                 type="integer",
+     *                 example=1,
+     *             ),
+     *             @OA\Property(
+     *                 property="total",
+     *                 type="integer",
+     *                 example=4,
+     *         )),
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthenticated",
+     *     ),
+     *     security={
+     *       {"bearerAuth": {}},
+     *     },
+     * )
+     *
+     * @return Response
+     */
+    public function index(): Response
+    {
+        $users = User::with('roles')->paginate(1); //@TODO paginate
+
+        return response([
+            'users' => $users,
+        ], 200);
+    }
+
+    /**
+     * @OA\Get(
+     *     path="/users/{user}",
+     *     operationId="users_show",
+     *     tags={"Users"},
+     *     summary="Show User",
+     *     @OA\Response(
+     *         response="200",
+     *         description="Everything is fine",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *             property="role",
+     *             type="object",
+     *             ref="#/components/schemas/UserResource",
+     *         )),
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthenticated",
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="Error: Not Found",
+     *     ),
+     *     @OA\Parameter(
+     *         name="user",
+     *         in="path",
+     *         description="The user id",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *         )
+     *     ),
+     *     security={
+     *       {"bearerAuth": {}},
+     *     },
+     * )
+     *
+     * @param User $user
+     * @return Response
+     */
+    public function show(User $user): Response
+    {
+        return response([
+            'role' => User::with('roles')->find($user->id),
+        ], 200);
+    }
+
+    /**
+     * @OA\Put(
+     *     path="/users/{user}",
+     *     operationId="users_update",
+     *     tags={"Users"},
+     *     summary="Update User",
+     *     @OA\Response(
+     *         response="200",
+     *         description="Everything is fine",
+     *         @OA\JsonContent(
+     *             @OA\Property(
+     *             property="user",
+     *             type="object",
+     *             ref="#/components/schemas/UserResource",
+     *         )),
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthenticated",
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="Error: Not Found",
+     *     ),
+     *     @OA\Parameter(
+     *         name="user",
+     *         in="path",
+     *         description="The user id",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *         )
+     *     ),
+     *     @OA\RequestBody(
+     *         required=true,
+     *         @OA\JsonContent(ref="#/components/schemas/UserUpdateRequest")
+     *     ),
+     *     security={
+     *       {"bearerAuth": {}},
+     *     },
+     * )
+     *
+     * @param Request $request
+     * @param User $user
+     * @return Response
+     */
+    public function update(Request $request, User $user): Response
     {
         $fields = $request->validate([
-            'name' => 'string',
-            'email' => 'email|unique:users,email',
+            'first_name' => 'string|max:100',
+            'last_name' => 'string|max:100',
+            'email' => [
+                'email',
+                Rule::unique('users')->ignore($user->id),
+            ],
             'password' => 'string',
+            'roles' => 'array',
         ]);
 
-        $user = User::find($id);
-
-        if(!$user) {
-            return response([
-                'message' => 'User not found',
-            ], 401);
-        }
-
+        $user->roles()->sync($fields['roles']);
         $user->fill($fields)->save();
 
         return response([
-            'user' => $user,
+            'user' => User::with('roles')->find($user->id),
         ], 201);
+    }
+
+    /**
+     * @OA\Delete (
+     *     path="/users/{user}",
+     *     operationId="users_delete",
+     *     tags={"Users"},
+     *     summary="Delete User",
+     *     @OA\Response(
+     *         response="204",
+     *         description="Everything is fine",
+     *     ),
+     *     @OA\Response(
+     *         response="401",
+     *         description="Unauthenticated",
+     *     ),
+     *     @OA\Response(
+     *         response="404",
+     *         description="Error: Not Found",
+     *     ),
+     *     @OA\Parameter(
+     *         name="user",
+     *         in="path",
+     *         description="The user id",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="integer",
+     *         )
+     *     ),
+     *     security={
+     *       {"bearerAuth": {}},
+     *     },
+     * )
+     *
+     * @param User $user
+     * @return Response
+     */
+    public function destroy(User $user): Response
+    {
+        $user->delete();
+
+        return response([], 204);
     }
 }
